--- a/Denizen/template/forumlist_body.html
+++ b/Denizen/template/forumlist_body.html
@@ -15,8 +15,7 @@
                                         <!-- EVENT forumlist_body_category_header_row_prepend -->
                                         <dl class="row-item">
                                                 <dt><div class="list-inner"><!-- IF forumrow.S_IS_CAT --><a href="{forumrow.U_VIEWFORUM}">{forumrow.FORUM_NAME}</a><!-- ELSE -->{L_FORUM}<!-- ENDIF --></div></dt>
-                                                <dd class="topics">{L_TOPICS}</dd>
-                                                <dd class="posts">{L_POSTS}</dd>
+                                                <dd class="posts">Statistics</dd>
                                                 <dd class="lastpost"><span>{L_LAST_POST}</span></dd>
                                         </dl>
                                         <!-- EVENT forumlist_body_category_header_row_append -->
