--- a/Denizen/template/forumlist_body.html
+++ b/Denizen/template/forumlist_body.html
@@ -16,8 +16,7 @@
 					<!-- EVENT forumlist_body_category_header_row_prepend -->
 					<dl class="icon">
 						<dt><div class="list-inner"><!-- IF forumrow.S_IS_CAT --><a href="{forumrow.U_VIEWFORUM}">{forumrow.FORUM_NAME}</a><!-- ELSE -->{L_FORUM}<!-- ENDIF --></div></dt>
-						<dd class="topics">{L_TOPICS}</dd>
-						<dd class="posts">{L_POSTS}</dd>
+						<dd class="posts">Statistics</dd>
 						<dd class="lastpost"><span>{L_LAST_POST}</span></dd>
 					</dl>
 					<!-- EVENT forumlist_body_category_header_row_append -->
@@ -72,8 +71,7 @@
 				<!-- IF forumrow.CLICKS -->
 					<dd class="redirect"><span>{L_REDIRECTS}{L_COLON} {forumrow.CLICKS}</span></dd>
 				<!-- ELSEIF not forumrow.S_IS_LINK -->
-					<dd class="topics">{forumrow.TOPICS} <dfn>{L_TOPICS}</dfn></dd>
-					<dd class="posts">{forumrow.POSTS} <dfn>{L_POSTS}</dfn></dd>
+					<dd class="posts"><small>Topics: {forumrow.TOPICS}<br>Posts: {forumrow.POSTS}</small></dd>
 					<dd class="lastpost"><span>
 						<!-- IF forumrow.U_UNAPPROVED_TOPICS -->
 							<a href="{forumrow.U_UNAPPROVED_TOPICS}">{UNAPPROVED_IMG}</a>
