--- a/Denizen/theme/content.css
+++ b/Denizen/theme/content.css
@@ -1,6 +1,10 @@
 /* Content Styles
 ---------------------------------------- */
 
+ul.forums {
+
+}
+
 ul.topiclist {
 	display: block;
 	list-style-type: none;
@@ -77,6 +81,100 @@ ul.topiclist dfn {
 	width: 990px;
 }
 
+ul.topiclist li.row dt a.subforum {
+	background-image: none;
+	background-position: 0 50%;
+	background-repeat: no-repeat;
+	position: relative;
+	white-space: nowrap;
+	padding: 0 0 0 12px;
+}
+
+ul.topiclist_recent {
+	display: block;
+	list-style-type: none;
+	margin: 0;
+}
+
+ul.topiclist_recent li {
+	display: block;
+	list-style-type: none;
+	margin: 0;
+}
+
+ul.topiclist_recent dl {
+	position: relative;
+}
+
+ul.topiclist_recent li.row dl {
+	padding: 2px 0;
+}
+
+ul.topiclist_recent dt, ul.topiclist_recent dd {
+	display: block;
+	float: left;
+}
+
+ul.topiclist_recent dt {
+	width: 100%;
+	margin-right: -440px;
+	font-size: 1.1em;
+}
+
+ul.topiclist_recent.missing-column dt {
+	margin-right: -345px;
+}
+
+ul.topiclist_recent.two-long-columns dt {
+	margin-right: -250px;
+}
+
+ul.topiclist_recent.two-columns dt {
+	margin-right: -80px;
+}
+
+ul.topiclist_recent dt .list-inner {
+	margin-right: 440px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+ul.topiclist_recent.missing-column dt .list-inner {
+	margin-right: 345px;
+}
+
+ul.topiclist_recent.two-long-columns dt .list-inner {
+	margin-right: 250px;
+}
+
+ul.topiclist_recent.two-columns dt .list-inner {
+	margin-right: 80px;
+}
+
+ul.topiclist_recent dd {
+	border-left: 1px solid transparent;
+	padding: 4px 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+ul.topiclist_recent dfn {
+	/* Labels for post/view counts */
+	position: absolute;
+	left: -999px;
+	width: 990px;
+}
+
+ul.topiclist_recent li.row dt a.subforum {
+	background-image: none;
+	background-position: 0 50%;
+	background-repeat: no-repeat;
+	position: relative;
+	white-space: nowrap;
+	padding: 0 0 0 12px;
+}
+
 .forum-image {
 	float: left;
 	padding-top: 5px;
@@ -96,6 +194,15 @@ li.row {
 
 ul.topiclist li.row:first-child {
     border-top: 1px solid transparent;
+}
+
+li.row strong {
+	font-weight: bold;
+}
+
+li.header {
+	border-bottom: 5px solid;
+	border-top: 1px solid;
 }
 
 li.header dt, li.header dd {
@@ -208,6 +315,11 @@ dd.time {
 }
 
 dd.lastpost > span, ul.topiclist dd.info > span, ul.topiclist dd.time > span, dd.redirect > span, dd.moderation > span {
+	display: block;
+	padding-left: 5px;
+}
+
+dd.lastpost > span, ul.topiclist_recent dd.info > span, ul.topiclist_recent dd.time > span, dd.redirect > span, dd.moderation > span {
 	display: block;
 	padding-left: 5px;
 }
