--- a/Denizen/theme/responsive.css
+++ b/Denizen/theme/responsive.css
@@ -88,6 +88,57 @@
 	p.jumpbox-return {
 		display: none;
 	}
+ul.topiclist dd {
+	display: none;
+}
+ul.topiclist dd.mark {
+	display: block;
+}
+// ...
+
+
+ul.topiclist_recent li.header dt, ul.topiclist_recent li.header dt .list-inner {
+	margin-right: 0 !important;
+	padding-right: 0;
+}
+
+ul.topiclist_recent li.header dd {
+	display: none !important;
+}
+
+ul.topiclist_recent dt, ul.topiclist_recent dt .list-inner,
+ul.topiclist_recent.missing-column dt, ul.topiclist_recent.missing-column dt .list-inner,
+ul.topiclist_recent.two-long-columns dt, ul.topiclist_recent.two-long-columns dt .list-inner,
+ul.topiclist_recent.two-columns dt, ul.topiclist_recent.two-columns dt .list-inner {
+	margin-right: 0;
+}
+
+ul.topiclist_recent dt .list-inner.with-mark {
+	padding-right: 34px;
+}
+
+ul.topiclist_recent dt .list-inner {
+	min-height: 28px;
+}
+
+ul.topiclist_recent li.header dt .list-inner {
+	min-height: 0;
+}
+
+ul.topiclist_recent dd {
+	display: none;
+}
+ul.topiclist_recent dd.mark {
+	display: block;
+}
+/* Forums and topics lists
+----------------------------------------*/
+ul.topiclist.forums dt {
+	margin-right: -250px;
+}
+ul.topiclist.forums dt .list-inner {
+	margin-right: 250px;
+}
 
 	.display-options > label:nth-child(1) {
 		display: block;
@@ -128,6 +179,81 @@
 	----------------------------------------*/
 	html {
 		height: auto;
+	}
+}
+// ...
+
+ul.topiclist_recent.forums dt {
+	margin-right: -250px;
+}
+ul.topiclist_recent.forums dt .list-inner {
+	margin-right: 250px;
+}
+
+ul.topiclist_recent.forums dd.lastpost {
+	display: block;
+}
+
+ul.topiclist_recent dd.mark {
+	display: block;
+	position: absolute;
+	right: 5px;
+	top: 0;
+	margin: 0;
+	width: auto;
+	min-width: 0;
+	text-align: left;
+}
+
+ul.topiclist_recent.forums dd.topics dfn, ul.topiclist.topics dd.posts dfn {
+	position: relative;
+	left: 0;
+	width: auto;
+	display: inline;
+	font-weight: normal;
+}
+
+@media only screen and (max-width: 550px), only screen and (max-device-width: 550px) {
+	ul.topiclist_recent.forums dt {
+		margin-right: 0;
+	}
+
+	ul.topiclist_recent.forums dt .list-inner {
+		margin-right: 0;
+	}
+
+	ul.topiclist_recent.forums dd.lastpost {
+		display: none;
+	}
+}
+
+
+li.row .responsive-show strong {
+	font-weight: bold;
+	color: inherit;
+}
+
+ul.topiclist li.row dt a.subforum {
+	display: inline-block;
+	vertical-align: bottom;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: 100px;
+}
+
+ul.topiclist_recent li.row dt a.subforum {
+	display: inline-block;
+	vertical-align: bottom;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: 100px;
+}
+
+/* Notifications list
+----------------------------------------*/
+@media only screen and (max-width: 350px), only screen and (max-device-width: 350px) {
+	.dropdown-extended .dropdown-contents {
+		width: auto;
 	}
 
 	body {
