--- a/Denizen/theme/common.css
+++ b/Denizen/theme/common.css
@@ -205,6 +205,10 @@ a:hover	{ text-decoration: underline; }
 	border-bottom: 1px solid;
 }
 
+.recent-topics {
+	font-size: 75%;
+}
+
 .forabg, .forumbg {
 	margin-bottom: 20px;
 	padding: 0;
