--- a/Denizen/theme/content.css
+++ b/Denizen/theme/content.css
@@ -242,6 +242,26 @@ li.header dl.row-item dt .list-inner {
 	padding-right: 38px;
 }
 
+ul.topiclist_recent .triangle {
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 5px 5px 5px;
+	border-color: transparent transparent #0B417B transparent;
+	margin-top: -5px;
+	margin-left: 30px;
+}
+
+.triangle {
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 5px 5px 5px;
+	border-color: transparent transparent #ea8808 transparent;
+	margin-top: -5px;
+	margin-left: 30px;
+}
+
 /* Forum list column styles */
 dl.row-item {
 	background-position: 10px 50%;		/* Position of folder icon */
