--- a/Denizen/template/overall_footer.html
+++ b/Denizen/template/overall_footer.html
@@ -25,7 +25,7 @@
 <div class="copyright">
     <!-- EVENT overall_footer_copyright_prepend -->
     <br />
-	Denizen style by <a href="mcmonkey">mcmonkey</a>.
+	Denizen style by <a href="http://mcmonkey.org">mcmonkey</a>.
 	<br />
     Based on Absolution Style by <a href="http://www.planetstyles.net">Premium phpBB Styles</a><br />
 	<br />{CREDIT_LINE}
