--- a/Denizen/theme/forms.css
+++ b/Denizen/theme/forms.css
@@ -5,7 +5,7 @@
 ----------------------------------------*/
 fieldset {
 	border-width: 0;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Verdana, Helvetica, Arial, sans-serif;
 	font-size: 1.1em;
 }
 
@@ -14,11 +14,11 @@ input {
 	vertical-align: middle;
 	padding: 0 3px;
 	font-size: 1em;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Verdana, Helvetica, Arial, sans-serif;
 }
 
 select {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Verdana, Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	cursor: pointer;
 	vertical-align: middle;
@@ -37,11 +37,11 @@ option {
 
 select optgroup option {
 	padding-right: 1em;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Verdana, Helvetica, Arial, sans-serif;
 }
 
 textarea {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", Verdana, Helvetica, Arial, sans-serif;
 	width: 60%;
 	padding: 2px;
 	font-size: 1em;
@@ -96,7 +96,7 @@ fieldset.fields1 div {
 }
 
 /* Set it back to 0px for the reCaptcha divs: PHPBB3-9587 */
-fieldset.fields1 #recaptcha_widget_div div, fieldset.fields1 .live-search div {
+fieldset.fields1 .live-search div {
 	margin-bottom: 0;
 }
 
@@ -138,8 +138,14 @@ dd textarea {
 }
 
 /* Hover effects */
-#timezone {
+.timezone {
 	width: 95%;
+}
+
+/* Browser-specific tweaks */
+button::-moz-focus-inner {
+	padding: 0;
+	border: 0
 }
 
 /* Quick-login on index page */
@@ -165,7 +171,7 @@ fieldset.quick-login label {
 /* Display options on viewtopic/viewforum pages  */
 fieldset.display-options {
 	text-align: center;
-	margin: 0px 0 15px 0;
+	margin: 3px 0 5px 0;
 }
 
 fieldset.display-options label {
@@ -175,6 +181,24 @@ fieldset.display-options label {
 
 fieldset.display-options a {
 	margin-top: 3px;
+}
+
+.dropdown fieldset.display-options {
+	font-size: 1em;
+	margin: 0;
+	padding: 0;
+}
+
+.dropdown fieldset.display-options label {
+	display: block;
+	margin: 4px;
+	padding: 0;
+	text-align: right;
+	white-space: nowrap;
+}
+
+.dropdown fieldset.display-options select {
+	min-width: 120px;
 }
 
 /* Display actions for ucp and mcp pages */
@@ -214,29 +238,27 @@ fieldset.submit-buttons {
 
 fieldset.submit-buttons input {
 	vertical-align: middle;
-	padding-top: 3px;
-	padding-bottom: 3px;
 }
 
 /* Posting page styles
 ----------------------------------------*/
 
 /* Buttons used in the editor */
-#format-buttons {
+.format-buttons {
 	margin: 15px 0 2px 0;
 }
 
-#format-buttons input, #format-buttons select {
+.format-buttons input, .format-buttons select {
 	vertical-align: middle;
 }
 
 /* Main message box */
-#message-box {
+.message-box {
 	width: 80%;
 }
 
-#message-box textarea {
-	font-family: Arial, Helvetica, sans-serif;
+.message-box textarea {
+	font-family: "Trebuchet MS", Verdana, Helvetica, Arial, sans-serif;
 	width: 450px;
 	height: 270px;
 	min-width: 100%;
@@ -253,12 +275,12 @@ fieldset.submit-buttons input {
 }
 
 /* Emoticons panel */
-#smiley-box {
+.smiley-box {
 	width: 18%;
 	float: right;
 }
 
-#smiley-box img {
+.smiley-box img {
 	margin: 3px;
 }
 
@@ -314,8 +336,9 @@ a.button1, input.button1, input.button3, a.button2, input.button2 {
 	width: auto !important;
 	padding-top: 1px;
 	padding-bottom: 1px;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", Verdana, Helvetica, Arial, sans-serif;
 	background: transparent none repeat-x top left;
+	line-height: 1.5;
 }
 
 a.button1, input.button1 {
@@ -342,18 +365,15 @@ a.button2, input.button2, input.button3 {
 }
 
 /* <a> button in the style of the form buttons */
-a.button1, a.button1:link, a.button1:visited, a.button1:active, a.button2, a.button2:link, a.button2:visited, a.button2:active {
+a.button1, a.button2 {
 	text-decoration: none;
-	padding: 2px 8px;
-	line-height: 250%;
+	padding: 0 3px;
 	vertical-align: text-bottom;
-	background-position: 0 1px;
 }
 
 /* Hover states */
 a.button1:hover, input.button1:hover, a.button2:hover, input.button2:hover, input.button3:hover {
 	border: 1px solid transparent;
-	background-position: 0 100%;
 }
 
 input.disabled {
@@ -375,31 +395,11 @@ input.button1:focus, input.button2:focus, input.button3:focus {
 	border-right-width: 0;
 	border-radius: 4px 0 0 4px;
 	float: left;
-	height: 32px;
+	height: 33px;
 	padding: 3px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-}
-
-.search-box button {
-	float: left;
-}
-
-.search-box button.search-icon {
-	border-radius: 0;
-	font-size: 0;
-	height: 32px;
-	margin: 0;
-	padding: 8px 5px;
-}
-
-.search-box a.button {
-	border-left-width: 0;
-	border-radius: 0 4px 4px 0;
-	font-size: 0;
-	margin: 0;
-	padding: 6px 7px 6px 5px;
 }
 
 /* Search box (header)
@@ -412,39 +412,48 @@ input.button1:focus, input.button2:focus, input.button3:focus {
 	margin-top: 30px;
 }
 
-#search-box input.inputbox, .search-header button, .se-form-button {
+#search-box input.inputbox {
+	background: rgba(0,0,0,0.5);
+	padding: 10px;
+	color: #FFFFFF;
+}
+
+#search-box button.button-search, #search-box a.button-search-end {
 	border: none;
-	padding: 10px 10px;
-	font-weight: bold;
-	display: inline-block;
-	height: auto !important;
+	background: rgba(0,0,0,0.5);
+	box-shadow: none;
+}
+
+#search-box button.button-search i, #search-box a.button-search-end i {
+	color: #FFFFFF;
+}
+
+#search-box button.button-search:hover, #search-box a.button-search-end:hover {
+	text-shadow: none;
 }
 
 
-.search-header button, .se-form-button {
-	margin-left: 1px;	
+#search-box input.inputbox::-webkit-input-placeholder {
+   color: #FFFFFF;
 }
 
-a.se-form-button {
-	border-radius: 0 4px 4px 0;
+#search-box input.inputbox:-moz-placeholder { /* Firefox 18- */
+   color: #FFFFFF;  
 }
 
-.search-header button:hover, .se-form-button:hover {
-	cursor: pointer;
+#search-box input.inputbox::-moz-placeholder {  /* Firefox 19+ */
+   color: #FFFFFF;  
 }
+
+#search-box input.inputbox:-ms-input-placeholder {  
+   color: #FFFFFF;  
+}
+
+
 
 .search-header .inputbox { border: 0; }
 
-.search-header button {
-	border-top: 0;
-	border-bottom: 0;
-}
-
-.search-header a.button {
-	border: 0;
-	border-left: 1px;
-	padding: 3px 5px 3px 4px;
-}
+.linklist > li.responsive-search { display: none; }
 
 input.search {
 	background-image: none;
