--- a/Denizen/template/index_body.html
+++ b/Denizen/template/index_body.html
@@ -6,34 +6,36 @@
 
 <!-- INCLUDE forumlist_body.html -->
 
+
+<div class="action-bar compact">
+    <!-- IF U_MARK_FORUMS -->
+		<a href="{U_MARK_FORUMS}" class="mark-read" accesskey="m" data-ajax="mark_forums_read">{L_MARK_FORUMS_READ}</a>
+        <!-- IF S_USER_LOGGED_IN --><br /><br />{CURRENT_TIME}<!-- ENDIF -->
+        <br />{S_TIMEZONE}
+    <!-- ENDIF -->
+</div>
+
+
 <!-- EVENT index_body_forumlist_body_after -->
 
-<div style="text-align: center; margin-bottom: 15px;">
-<!-- IF U_MARK_FORUMS -->
-	<div class="action-bar compact">
-		<a href="{U_MARK_FORUMS}" class="mark-read" accesskey="m" data-ajax="mark_forums_read">{L_MARK_FORUMS_READ}</a>
-	</div>
-<!-- ENDIF -->
-{CURRENT_TIME}<br /><!-- EVENT overall_footer_timezone_before -->{S_TIMEZONE}<!-- EVENT overall_footer_timezone_after --></div>
+<!-- EVENT index_body_stat_blocks_before -->
 
-<div class="forabg">
+<div class="forabg index-footer">
     <div class="inner">
-    <ul class="topiclist">
-        <li class="header">
-            <dl class="icon">
-                <dt>
-                    <div class="list-inner">
-                        {L_INFORMATION}
-                    </div>
-                </dt>
-            </dl>
-    </ul>
-    <ul class="topiclist forums">
-		<!-- IF not S_USER_LOGGED_IN and not S_IS_BOT -->    
-            <li class="row">
-                <form method="post" action="{S_LOGIN_ACTION}">
+        <ul class="topiclist">
+            <li class="header">
+                <dl class="row-item">
+                    <dt><div class="list-inner">{L_INFORMATION}</dt>
+                </dl>
+            </li>
+        </ul>
+        <ul class="topiclist forums">
+        	<!-- IF not S_USER_LOGGED_IN and not S_IS_BOT -->
+        	<li class="row">
+                <form method="post" action="{S_LOGIN_ACTION}" class="headerspace">
+                <h3><i class="fa fa-lock"></i> <a href="{U_LOGIN_LOGOUT}">{L_LOGIN_LOGOUT}</a><!-- IF S_REGISTER_ENABLED -->&nbsp; &bull; &nbsp;<a href="{U_REGISTER}">{L_REGISTER}</a><!-- ENDIF --></h3>
                     <fieldset class="quick-login">
-                        <label for="username"><span><i class="fa fa-lock"></i> {L_USERNAME}{L_COLON}</span> <input type="text" tabindex="1" name="username" id="username" size="10" class="inputbox" title="{L_USERNAME}" /></label>
+                        <label for="username"><span>{L_USERNAME}{L_COLON}</span> <input type="text" tabindex="1" name="username" id="username" size="10" class="inputbox" title="{L_USERNAME}" /></label>
                         <label for="password"><span>{L_PASSWORD}{L_COLON}</span> <input type="password" tabindex="2" name="password" id="password" size="10" class="inputbox" title="{L_PASSWORD}" autocomplete="off" /></label>
                         <!-- IF U_SEND_PASSWORD -->
                             <a href="{U_SEND_PASSWORD}">{L_FORGOT_PASS}</a>
@@ -44,47 +46,59 @@
                         <input type="submit" tabindex="5" name="login" value="{L_LOGIN}" class="button2" />
                         {S_LOGIN_REDIRECT}
                     </fieldset>
-                </form>                
+                </form>    
+                <br />     
             </li>
-        <!-- ENDIF -->
-        <!-- IF S_DISPLAY_ONLINE_LIST -->
-        <li class="row">
-            <div class="stat-block online-list">
-                <p>
-                    <!-- EVENT index_body_block_online_prepend -->
-                    <i class="fa fa-tachometer"></i> {TOTAL_USERS_ONLINE} ({L_ONLINE_EXPLAIN})<br />{RECORD_USERS}<br /> <br />{LOGGED_IN_USER_LIST}
-                    <!-- IF LEGEND --><br /><strong>{L_LEGEND}{L_COLON} {LEGEND}</strong><!-- ENDIF -->
-                    <!-- EVENT index_body_block_online_append -->
-                </p>
-            </div>        	
-        </li>
-        <!-- ENDIF -->
-        <!-- IF NEWEST_USER -->
-        <li class="row">
-            <div class="stat-block statistics">
-                <p>
-                    <!-- EVENT index_body_block_stats_prepend -->
-                    <i class="fa fa-line-chart"></i> {TOTAL_POSTS} &bull; {TOTAL_TOPICS} &bull; {TOTAL_USERS} &bull; {NEWEST_USER}
-                    <!-- EVENT index_body_block_stats_append -->
-                </p>
-            </div>        
-        </li>
-        <!-- ENDIF -->
-        <!-- IF S_DISPLAY_BIRTHDAY_LIST and .birthdays -->
-		<li class="row">
-            <div class="stat-block birthday-list">
-                <p>
-                    <!-- EVENT index_body_block_birthday_prepend -->
-                    <!-- IF .birthdays -->{L_CONGRATULATIONS}{L_COLON} <strong><!-- BEGIN birthdays -->{birthdays.USERNAME}<!-- IF birthdays.AGE !== '' --> ({birthdays.AGE})<!-- ENDIF --><!-- IF not birthdays.S_LAST_ROW -->, <!-- ENDIF --><!-- END birthdays --></strong><!-- ELSE -->{L_NO_BIRTHDAYS}<!-- ENDIF -->
-                    <!-- EVENT index_body_block_birthday_append -->
-                </p>
-            </div>        
-        </li>        
-        <!-- ENDIF -->
-    </ul>
-	</div>
+            <!-- ENDIF -->
+            <!-- IF S_DISPLAY_ONLINE_LIST -->
+            <li class="row">
+                <div class="stat-block online-list">
+                    <!-- IF U_VIEWONLINE --><h3><i class="fa fa-tachometer"></i> <a href="{U_VIEWONLINE}">{L_WHO_IS_ONLINE}</a></h3><!-- ELSE --><h3><i class="fa fa-tachometer"></i> {L_WHO_IS_ONLINE}</h3><!-- ENDIF -->
+                    <p>
+                        <!-- EVENT index_body_block_online_prepend -->
+                        {TOTAL_USERS_ONLINE} ({L_ONLINE_EXPLAIN})<br />{RECORD_USERS}<br /> <br />{LOGGED_IN_USER_LIST}
+                        <!-- IF LEGEND --><br /><strong>{L_LEGEND}{L_COLON} {LEGEND}</strong><!-- ENDIF -->
+                        <!-- EVENT index_body_block_online_append -->
+                    </p>
+                </div>
+            </li>
+            <!-- ENDIF -->
+            <!-- IF S_DISPLAY_BIRTHDAY_LIST and .birthdays -->
+            <li class="row">
+                <div class="stat-block birthday-list">
+                    <h3><i class="fa fa-birthday-cake"></i> {L_BIRTHDAYS}</h3>
+                    <p>
+                        <!-- EVENT index_body_block_birthday_prepend -->
+                        <!-- IF .birthdays -->{L_CONGRATULATIONS}{L_COLON} <strong><!-- BEGIN birthdays -->{birthdays.USERNAME}<!-- IF birthdays.AGE !== '' --> ({birthdays.AGE})<!-- ENDIF --><!-- IF not birthdays.S_LAST_ROW -->, <!-- ENDIF --><!-- END birthdays --></strong><!-- ELSE -->{L_NO_BIRTHDAYS}<!-- ENDIF -->
+                        <!-- EVENT index_body_block_birthday_append -->
+                    </p>
+                </div>
+            </li>
+            <!-- ENDIF -->    
+            <!-- IF NEWEST_USER -->
+			<li class="row">
+                <div class="stat-block statistics">
+                    <h3><i class="fa fa-line-chart"></i> {L_STATISTICS}</h3>
+                    <p>
+                        <!-- EVENT index_body_block_stats_prepend -->
+                        {TOTAL_POSTS} &bull; {TOTAL_TOPICS} &bull; {TOTAL_USERS} &bull; {NEWEST_USER}
+                        <!-- EVENT index_body_block_stats_append -->
+                    </p>
+                </div>
+            </li>
+            <!-- ENDIF -->                
+        </ul>
+    </div>
 </div>
-<!-- EVENT index_body_stat_blocks_before -->
+
+
+
+
+
+
+
+
+
 
 <!-- EVENT index_body_stat_blocks_after -->
 
