--- a/Denizen/template/overall_footer.html
+++ b/Denizen/template/overall_footer.html
@@ -3,32 +3,34 @@
 
 <!-- EVENT overall_footer_page_body_after -->
 
-<div id="page-footer" role="contentinfo">
+<div id="page-footer" class="page-footer" role="contentinfo">
 	<!-- INCLUDE navbar_footer.html -->
 
-	<div id="darkenwrapper" data-ajax-error-title="{L_AJAX_ERROR_TITLE}" data-ajax-error-text="{L_AJAX_ERROR_TEXT}" data-ajax-error-text-abort="{L_AJAX_ERROR_TEXT_ABORT}" data-ajax-error-text-timeout="{L_AJAX_ERROR_TEXT_TIMEOUT}" data-ajax-error-text-parsererror="{L_AJAX_ERROR_TEXT_PARSERERROR}">
-		<div id="darken">&nbsp;</div>
+	<div id="darkenwrapper" class="darkenwrapper" data-ajax-error-title="{L_AJAX_ERROR_TITLE}" data-ajax-error-text="{L_AJAX_ERROR_TEXT}" data-ajax-error-text-abort="{L_AJAX_ERROR_TEXT_ABORT}" data-ajax-error-text-timeout="{L_AJAX_ERROR_TEXT_TIMEOUT}" data-ajax-error-text-parsererror="{L_AJAX_ERROR_TEXT_PARSERERROR}">
+		<div id="darken" class="darken">&nbsp;</div>
 	</div>
 
 	<div id="phpbb_alert" class="phpbb_alert" data-l-err="{L_ERROR}" data-l-timeout-processing-req="{L_TIMEOUT_PROCESSING_REQ}">
-		<a href="#" class="alert_close"></a>
+		<a href="#" class="alert_close">
+			<i class="icon fa-times-circle fa-fw" aria-hidden="true"></i>
+		</a>
 		<h3 class="alert_title">&nbsp;</h3><p class="alert_text"></p>
 	</div>
 	<div id="phpbb_confirm" class="phpbb_alert">
-		<a href="#" class="alert_close"></a>
+		<a href="#" class="alert_close">
+			<i class="icon fa-times-circle fa-fw" aria-hidden="true"></i>
+		</a>
 		<div class="alert_text"></div>
 	</div>
 </div>
 
-</div> <!-- /#wrap -->
+</div>
 
 <div class="copyright">
+	Absolution Style by <a href="http://www.planetstyles.net/">Premium phpBB Styles</a><br />
+    <a href="http://www.planetstyles.net"><img src="{T_THEME_PATH}/images/credit_line.png" width="140" /></a><br /><br />
     <!-- EVENT overall_footer_copyright_prepend -->
-    <br />
-	Denizen style by <a href="mcmonkey">mcmonkey</a>.
-	<br />
-    Based on Absolution Style by <a href="http://www.planetstyles.net">Premium phpBB Styles</a><br />
-	<br />{CREDIT_LINE}
+    {CREDIT_LINE}
     <!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
     <!-- EVENT overall_footer_copyright_append -->
     <!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
@@ -43,20 +45,49 @@
 <script type="text/javascript" src="{T_JQUERY_LINK}"></script>
 <!-- IF S_ALLOW_CDN --><script type="text/javascript">window.jQuery || document.write('\x3Cscript src="{T_ASSETS_PATH}/javascript/jquery.min.js?assets_version={T_ASSETS_VERSION}">\x3C/script>');</script><!-- ENDIF -->
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/core.js?assets_version={T_ASSETS_VERSION}"></script>
-<!-- INCLUDEJS jquery.collapse.js -->
-<!-- INCLUDEJS jquery.collapse_storage.js -->
-
 <!-- INCLUDEJS forum_fn.js -->
 <!-- INCLUDEJS ajax.js -->
+<!-- IF S_ALLOW_CDN -->
+	<script type="text/javascript">
+		(function($){
+			var $fa_cdn = $('head').find('link[rel="stylesheet"]').first(),
+				$span = $('<span class="fa" style="display:none"></span>').appendTo('body');
+			if ($span.css('fontFamily') !== 'FontAwesome' ) {
+				$fa_cdn.after('<link href="{T_ASSETS_PATH}/css/font-awesome.min.css" rel="stylesheet">');
+				$fa_cdn.remove();
+			}
+			$span.remove();
+		})(jQuery);
+	</script>
+<!-- ENDIF -->
+
+<!-- IF S_COOKIE_NOTICE -->
+	<script src="{T_ASSETS_PATH}/cookieconsent/cookieconsent.min.js?assets_version={T_ASSETS_VERSION}"></script>
+	<script>
+		window.addEventListener("load", function(){
+			window.cookieconsent.initialise({
+				"palette": {
+					"popup": {
+						"background": "#0F538A"
+					},
+					"button": {
+						"background": "#E5E5E5"
+					}
+				},
+				"theme": "classic",
+				"content": {
+					"message": "{LA_COOKIE_CONSENT_MSG}",
+					"dismiss": "{LA_COOKIE_CONSENT_OK}",
+					"link": "{LA_COOKIE_CONSENT_INFO}"
+				}
+			})});
+	</script>
+<!-- ENDIF -->
 
 <!-- EVENT overall_footer_after -->
 
 <!-- IF S_PLUPLOAD --><!-- INCLUDE plupload.html --><!-- ENDIF -->
 {$SCRIPTS}
-
-<!-- EVENT overall_footer_body_after -->
-
-<!-- EVENT overall_footer_body_after -->
 
 <!-- EVENT overall_footer_body_after -->
 
