--- a/Denizen/theme/content.css
+++ b/Denizen/theme/content.css
@@ -7,10 +7,6 @@ ul.topiclist {
 	margin: 0;
 }
 
-ul.forums {
-
-}
-
 ul.topiclist li {
 	display: block;
 	list-style-type: none;
@@ -81,15 +77,6 @@ ul.topiclist dfn {
 	width: 990px;
 }
 
-ul.topiclist li.row dt a.subforum {
-	background-image: none;
-	background-position: 0 50%;
-	background-repeat: no-repeat;
-	position: relative;
-	white-space: nowrap;
-	padding: 0 0 0 12px;
-}
-
 .forum-image {
 	float: left;
 	padding-top: 5px;
@@ -103,17 +90,12 @@ li.row {
 	padding: 10px;
 }
 
+.index-footer li.row {
+	padding: 10px 20px;
+}
+
 ul.topiclist li.row:first-child {
-	border-top: 1px solid transparent;
-}
-
-li.row strong {
-	font-weight: bold;
-}
-
-li.header {
-	border-bottom: 5px solid;
-	border-top: 1px solid;
+    border-top: 1px solid transparent;
 }
 
 li.header dt, li.header dd {
@@ -123,7 +105,8 @@ li.header dt, li.header dd {
 	padding-top: 2px;
 	padding-bottom: 2px;
 	font-size: 1.2em;
-	font-family: Arial, Helvetica, sans-serif;
+	font-weight: normal !important;
+
 }
 
 li.header dt {
@@ -142,46 +125,40 @@ li.header dd {
 	box-sizing: border-box;
 }
 
-li.header dl.icon dt, li.header dl.icon dd {
+li.header dl.row-item dt, li.header dl.row-item dd {
 	min-height: 0;
 }
 
-li.header dl.icon dt .list-inner {
+li.header dl.row-item dt .list-inner {
 	/* Tweak for headers alignment when folder icon used */
 	padding-left: 12px;
 	padding-right: 38px;
 }
 
-.triangle {
-	width: 0;
-	height: 0;
-	border-style: solid;
-	border-width: 0 5px 5px 5px;
-	border-color: transparent transparent #ea8808 transparent;
-	margin-top: -5px;
-	margin-left: 30px;
-}
-
 /* Forum list column styles */
-dl.icon {
+dl.row-item {
 	background-position: 10px 50%;		/* Position of folder icon */
 	background-repeat: no-repeat;
 }
 
-dl.icon dt {
+dl.row-item dt {
 	background-repeat: no-repeat;
 	background-position: 5px 95%;		/* Position of topic icon */
 }
 
-dl.icon dt .list-inner {
+dl.row-item dt .list-inner {
 	padding-left: 65px;					/* Space for folder icon */
 }
 
-dl.icon dt, dl.icon dd {
+dl.row-item dt, dl.row-item dd {
 	min-height: 35px;
 }
 
-dl a.icon-link {						/* topic row icon links */
+dl.row-item dt a {
+	display: inline;
+}
+
+dl a.row-item-link {						/* topic row icon links */
 	display: block;
 	width: 30px;
 	height: 30px;
@@ -197,7 +174,8 @@ dd.posts, dd.topics, dd.views, dd.extra, dd.mark {
 	width: 80px;
 	text-align: center;
 	line-height: 2.2em;
-	font-size: 1.6em;
+	font-size: 1.4em;
+	font-weight: bold;
 }
 
 dd.posts, dd.topics, dd.views {
@@ -205,13 +183,13 @@ dd.posts, dd.topics, dd.views {
 }
 
 /* List in forum description */
-dl.icon dt ol,
-dl.icon dt ul {
+dl.row-item dt ol,
+dl.row-item dt ul {
 	list-style-position: inside;
 	margin-left: 1em;
 }
 
-dl.icon dt li {
+dl.row-item dt li {
 	display: list-item;
 	list-style-type: inherit;
 }
@@ -251,7 +229,7 @@ dd.option {
 	padding: 0;
 	line-height: 1.48em;
 	width: 76%;
-	float: right;
+	float: left;
 	position: relative;
 }
 
@@ -273,7 +251,6 @@ dd.option {
 	margin-bottom: 0.3em !important;
 	text-transform: none;
 	border: none;
-	font-family: Arial, Helvetica, sans-serif;
 	line-height: 125%;
 }
 
@@ -305,28 +282,28 @@ dd.option {
 
 /* Topic review panel
 ----------------------------------------*/
-#review {
+.panel .review {
 	margin-top: 2em;
 }
 
-#topicreview {
+.topicreview {
 	padding-right: 5px;
 	overflow: auto;
 	height: 300px;
 }
 
-#topicreview .postbody {
+.topicreview .postbody {
 	width: auto;
 	float: none;
 	margin: 0;
 	height: auto;
 }
 
-#topicreview .post {
+.topicreview .post {
 	height: auto;
 }
 
-#topicreview h2 {
+.topicreview h2 {
 	border-bottom-width: 0;
 }
 
@@ -336,7 +313,7 @@ dd.option {
 
 /* MCP Post details
 ----------------------------------------*/
-#post_details {
+.post_details {
 	/* This will only work in IE7+, plus the others */
 	overflow: auto;
 	max-height: 300px;
@@ -349,7 +326,6 @@ dd.option {
 	min-height: 3em;
 	overflow: hidden;
 	line-height: 1.4em;
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1em;
 	padding-bottom: 1px;
 }
@@ -374,14 +350,12 @@ dd.option {
 }
 
 .content p {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.2em;
 	margin-bottom: 1em;
 	line-height: 1.4em;
 }
 
 dl.faq {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.1em;
 	margin-top: 1em;
 	margin-bottom: 2em;
@@ -402,8 +376,7 @@ dl.faq dt {
 }
 
 .content ul, .content ol {
-	margin-bottom: 1em;
-	margin-left: 3em;
+	margin: 0.8em 0 0.9em 3em;
 }
 
 .posthilit {
@@ -413,8 +386,7 @@ dl.faq dt {
 /* Post author */
 p.author {
 	margin-bottom: 0.6em;
-	padding: 0 0 5px 0;
-	font-family: Arial, Helvetica, sans-serif;
+	padding: 0 0 20px 0;
 	font-size: 1em;
 	line-height: 1.2em;
 	clear: both;
@@ -449,13 +421,11 @@ dd .signature {
 }
 
 .signature ul, .signature ol {
-	margin-bottom: 1em;
-	margin-left: 3em;
+	margin: 0.8em 0 0.9em 3em;
 }
 
 /* Post noticies */
 .notice {
-	font-family: Arial, Helvetica, sans-serif;
 	width: auto;
 	margin-top: 1.5em;
 	padding-top: 0.2em;
@@ -479,7 +449,7 @@ blockquote {
 	background: transparent none 6px 8px no-repeat;
 	border-left: 5px solid transparent;
 	font-size: 0.95em;
-	margin: 0.5em 1px 0 25px;
+	margin: 0.5em 1px 20px 25px;
 	overflow: hidden;
 	padding: 5px;
 }
@@ -487,8 +457,9 @@ blockquote {
 blockquote blockquote {
 	/* Nested quotes */
 	font-size: 1em;
-	margin: 0.5em 1px 10px 15px;
+	margin: 0.5em 1px 20px 15px;
 }
+
 
 blockquote cite {
 	/* Username/source of quoter */
@@ -507,11 +478,22 @@ blockquote.uncited {
 	padding-top: 25px;
 }
 
+blockquote cite > div {
+	float: right;
+	font-weight: normal;
+}
+
+.postbody .content li blockquote {
+	overflow: inherit;
+	margin-left: 0;
+}
+
 /* Code block */
 .codebox {
 	padding: 3px;
 	border: 1px solid transparent;
 	font-size: 1em;
+	margin: 1em 0 1.2em 0;
 }
 
 .codebox p {
@@ -532,9 +514,8 @@ blockquote .codebox {
 	display: block;
 	height: auto;
 	max-height: 200px;
-	white-space: normal;
 	padding-top: 5px;
-	font: 0.9em Monaco, "Andale Mono","Courier New", Courier, mono;
+	font: 0.9em Monaco, "Andale Mono","Courier New", Courier, monospace;
 	line-height: 1.3em;
 	margin: 2px 0;
 }
@@ -542,20 +523,19 @@ blockquote .codebox {
 /* Attachments
 ----------------------------------------*/
 .attachbox {
-	float: right;
+	float: left;
 	width: auto;
 	max-width: 100%;
 	margin: 5px 5px 5px 0;
 	padding: 6px;
 	border: 1px dashed transparent;
-	clear: right;
+	clear: left;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
 .attachbox dt {
-	font-family: Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 }
 
@@ -606,7 +586,6 @@ div.inline-attachment p {
 }
 
 dl.file {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
 	display: block;
 }
 
@@ -615,7 +594,6 @@ dl.file dt {
 	margin: 0;
 	padding: 0;
 	font-weight: bold;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 dl.file dd {
@@ -631,7 +609,6 @@ dl.thumbnail img {
 
 dl.thumbnail dd {
 	font-style: italic;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .attachbox dl.thumbnail dd {
@@ -645,7 +622,6 @@ dl.thumbnail dt a:hover img {
 /* Post poll styles
 ----------------------------------------*/
 fieldset.polls {
-	font-family: Arial, Helvetica, sans-serif;
 }
 
 fieldset.polls dl {
@@ -689,7 +665,6 @@ fieldset.polls dd input {
 
 fieldset.polls dd div {
 	text-align: right;
-	font-family: Arial, Helvetica, sans-serif;
 	font-weight: bold;
 	padding: 2px 2px 0 2px;
 	overflow: visible;
@@ -713,9 +688,9 @@ fieldset.polls dd div {
 	margin: 5px 0 10px 0;
 	min-height: 80px;
 	border: 1px solid transparent;
-	border-width: 0 1px 0 0;
+	border-width: 0 0 0 1px;
 	width: 22%;
-	float: left;
+	float: right;
 	display: inline;
 	text-align: center;
 }
@@ -740,7 +715,7 @@ fieldset.polls dd div {
 
 /* Post-profile avatars */
 .postprofile .has-avatar .avatar-container {
-	margin-bottom: 3px;
+	margin-bottom: 15px;
 	overflow: hidden;
 }
 
@@ -755,10 +730,6 @@ fieldset.polls dd div {
 
 .postprofile .profile-posts a {
 	font-weight: normal;
-}
-
-.postprofile a.username, .postprofile a.username-coloured {
-	font-size: 14px;	
 }
 
 dd.profile-warnings {
@@ -851,7 +822,7 @@ table.fixed-width-table {
 
 /* Show scrollbars for items with overflow on iOS devices
 ----------------------------------------*/
-.postbody .content::-webkit-scrollbar, #topicreview::-webkit-scrollbar, #post_details::-webkit-scrollbar, .codebox code::-webkit-scrollbar, .attachbox dd::-webkit-scrollbar, .attach-image::-webkit-scrollbar, .dropdown-extended ul::-webkit-scrollbar {
+.postbody .content::-webkit-scrollbar, .topicreview::-webkit-scrollbar, .post_details::-webkit-scrollbar, .codebox code::-webkit-scrollbar, .attachbox dd::-webkit-scrollbar, .attach-image::-webkit-scrollbar, .dropdown-extended ul::-webkit-scrollbar {
 	width: 8px;
 	height: 8px;
 	-webkit-appearance: none;
@@ -859,7 +830,7 @@ table.fixed-width-table {
 	border-radius: 3px;
 }
 
-.postbody .content::-webkit-scrollbar-thumb, #topicreview::-webkit-scrollbar-thumb, #post_details::-webkit-scrollbar-thumb, .codebox code::-webkit-scrollbar-thumb, .attachbox dd::-webkit-scrollbar-thumb, .attach-image::-webkit-scrollbar-thumb, .dropdown-extended ul::-webkit-scrollbar-thumb {
+.postbody .content::-webkit-scrollbar-thumb, .topicreview::-webkit-scrollbar-thumb, .post_details::-webkit-scrollbar-thumb, .codebox code::-webkit-scrollbar-thumb, .attachbox dd::-webkit-scrollbar-thumb, .attach-image::-webkit-scrollbar-thumb, .dropdown-extended ul::-webkit-scrollbar-thumb {
 	background: rgba(0, 0, 0, .3);
 	border-radius: 3px;
 }
