restore original base changes (logo, label, ..)

--- a/Denizen/template/overall_header.html
+++ b/Denizen/template/overall_header.html
@@ -23,9 +23,11 @@
 <!-- ENDIF -->
 
 <!--
-	phpBB style name: Absolution
-	Based on style:   prosilver (this is the default phpBB3 style)
+	phpBB style name: Denizen Theme
+	Based on style: Absolution
+	original style:   prosilver (this is the default phpBB3 style)
 	Modified by: PlanetStyles.net ( http://www.planetstyles.net/ )
+	Modified by: mcmonkey ( http://mcmonkey.org )
 -->
 
 <!-- IF S_ALLOW_CDN -->
