--- a/Denizen/template/overall_footer.html
+++ b/Denizen/template/overall_footer.html
@@ -27,10 +27,12 @@
 </div>
 
 <div class="copyright">
-	Absolution Style by <a href="http://www.planetstyles.net/">Premium phpBB Styles</a><br />
-    <a href="http://www.planetstyles.net"><img src="{T_THEME_PATH}/images/credit_line.png" width="140" /></a><br /><br />
     <!-- EVENT overall_footer_copyright_prepend -->
-    {CREDIT_LINE}
+    <br />
+	Denizen style by <a href="mcmonkey">mcmonkey</a>.
+	<br />
+    Based on Absolution Style by <a href="http://www.planetstyles.net">Premium phpBB Styles</a><br />
+	<br />{CREDIT_LINE}
     <!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
     <!-- EVENT overall_footer_copyright_append -->
     <!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
