Absolution 3.2.3 - also remove old junk

--- a/Denizen/template/index_body.html
+++ b/Denizen/template/index_body.html
@@ -63,6 +63,9 @@
                 </div>
             </li>
             <!-- ENDIF -->
+
+			<!-- EVENT index_body_birthday_block_before -->
+
             <!-- IF S_DISPLAY_BIRTHDAY_LIST and .birthdays -->
             <li class="row">
                 <div class="stat-block birthday-list">
