--- a/Denizen/theme/responsive.css
+++ b/Denizen/theme/responsive.css
@@ -137,7 +137,7 @@
 	.wrap {
 		border: none;
 		border-radius: 0;
-		margin: 0 auto;
+		margin: 0;
 		min-width: 290px;
 		padding: 0 5px;
 	}
@@ -280,10 +280,6 @@
 		margin: 5px 0 0;
 	}
 
-	.row .pagination {
-		margin-top: 2px;
-		margin-bottom: 2px;
-	}
 
 	.row .pagination .ellipsis + li {
 		display: none !important;
@@ -571,10 +567,6 @@
 }
 
 @media (min-width: 701px) and (max-width: 950px) {
-	.row .pagination {
-		margin-top: 2px;
-		margin-bottom: 2px;
-	}
 
 	ul.topiclist dt {
     	margin-right: -410px;
